<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="search_hint">\Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="shareApp">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="titleMassageSupport">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="textMassageSupport">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="emailDeveloper">leopardo4174@ya.ru</string>
    <string name="ProblemConnections">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="nothingWasFoundText">Ничего не нашлось</string>
    <string name="RefreshButtonText">Обновить</string>
    <string name="titleHistorySearch">Вы искали</string>
    <string name="clearHistoryButton">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="startPlayTime">00:00</string>
    <string name="medialibrary">Медиатека</string>
    <string name="empty_medialibrary">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourites_tracks">Избранные треки</string>
    <string name="playLists">Плейлисты</string>
    <string name="name_hint">Название*</string>
    <string name="description_hint">Описание</string>
    <string name="Create">Создать</string>
    <string name="PlaylistName">Название альбома</string>
    <string name="quantityTracks">00 треков</string>
    <string name="track">track</string>
    <string name="playlistEmpty">В этом плейлисте ещё нет треков</string>
    <string name="selectedPlaylistName">Только рок, только хардкор</string>
    <string name="selectedPlaylistDescription">best of the best</string>
    <string name="toSharePlaylist">Поделиться</string>
    <string name="editInformation">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="deleteTrack">Удалить трек</string>
    <string name="acceptDeleteTrack">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="acceptDeletePlaylist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="shareMessage">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="titleSharePlaylist">Поделиться плейлистом</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="deletePlaylistMessege">Хотите удалить плейлист?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>

</resources>