<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
    tools:context="com.example.playlistmaker.settings.ui.SettingsFragment">


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen56"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            style="@style/MediumTextStyle"
            android:text="@string/settings"
            android:textSize="@dimen/primary_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="24dp">

        <LinearLayout
            style="@style/MenuBloksSettings">

            <TextView
                style="@style/TextInTheSettings"
                android:text="@string/dark_theme" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitch"
                style="@style/ButtonsInTheSettings"
                app:useMaterialThemeColors="false" />
        </LinearLayout>


        <LinearLayout
            style="@style/MenuBloksSettings">

            <TextView
                style="@style/TextInTheSettings"
                android:text="@string/share_the_app" />

            <Button
                style="@style/ButtonsInTheSettings"
                app:icon="@drawable/ic_share"
                android:id="@+id/toShare"/>

        </LinearLayout>

        <LinearLayout
            style="@style/MenuBloksSettings">

            <TextView
                style="@style/TextInTheSettings"
                android:text="@string/write_to_support" />

            <Button
                style="@style/ButtonsInTheSettings"
                app:icon="@drawable/ic_support"
                android:id="@+id/massageToSupport"/>

        </LinearLayout>

        <LinearLayout
            style="@style/MenuBloksSettings">

            <TextView
                style="@style/TextInTheSettings"
                android:text="@string/user_agreement" />

            <Button
                style="@style/ButtonsInTheSettings"
                app:icon="@drawable/ic_arrow_forward"
                android:id="@+id/sendUserAgreement"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>