<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingTop="14dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_text" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/medium_padding"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text"
            app:cornerRadius="@dimen/medium_padding"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/media_library_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text"
            app:cornerRadius="@dimen/medium_padding"
            app:icon="@drawable/ic_library"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_text"
            app:cornerRadius="@dimen/medium_padding"
            app:icon="@drawable/ic_setting"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>