<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/Seach_Actity"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <Button
            android:id="@+id/backMainActivity"
            style="@style/SettingsBackButton" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center_vertical"
        style="@style/MediumTextStyle"
        android:text="@string/search"
        android:textSize="@dimen/primary_text"
        tools:ignore="MissingConstraints" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/inputEditText"
        style="@style/seachEditText"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <ImageView
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center|end"
        android:src="@drawable/ic_clear"
        app:tint="@color/gray"
        android:visibility="gone" />

    </FrameLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrackList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/track_item"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/SearchResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ImageProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_communication_problems"/>
        <TextView
            android:id="@+id/SeachResultStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/ProblemConnections"
            android:textSize="19sp"
            android:textColor="?attr/colorOnSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"/>

        <Button
            android:id="@+id/RefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/colorOnSecondary"
            android:text="@string/RefreshButtonText"
            android:textColor="?attr/colorOnPrimary"
            android:textAllCaps="false"
            android:fontFamily="@font/ys_display_regular"
            app:cornerRadius="54dp"/>

    </LinearLayout>

</LinearLayout>

